adding eye tracker

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-survey-likert@1.1.0"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.0/dist/index.browser.min.js"></script>
     <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/extension-webgazer@1.0.0"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-webgazer-init-camera@1.0.0"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-webgazer-calibrate@1.0.0"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-webgazer-validate@1.0.0"></script>
     <script src="webgazer.js"></script>
     <script src="stimuli.js"></script>
     <script src="webcam.js"></script>
@@ -52,13 +56,96 @@
         type: jsPsychHtmlKeyboardResponse,
         stimulus: "Welcome to the experiment. Press any key to begin."
     };
-    timeline.push(welcome);
+    
 
-    var calibration_trial = {
+    var camera_instructions = {
+        type: jsPsychHtmlButtonResponse,
+        stimulus: `
+          <p>In order to participate you must allow the experiment to use your camera.</p>
+          <p>You will be prompted to do this on the next screen.</p>
+          <p>If you do not wish to allow use of your camera, you cannot participate in this experiment.<p>
+          <p>It may take up to 30 seconds for the camera to initialize after you give permission.</p>
+        `,
+        choices: ['Got it'],
+      }
+
+      var init_camera = {
+        type: jsPsychWebgazerInitCamera
+      }
+
+      var calibration_instructions = {
+        type: jsPsychHtmlButtonResponse,
+        stimulus: `
+          <p>Now you'll calibrate the eye tracking, so that the software can use the image of your eyes to predict where you are looking.</p>
+          <p>You'll see a series of dots appear on the screen. Look at each dot and click on it.</p>
+        `,
+        choices: ['Got it'],
+      }
+
+      var calibration = {
         type: jsPsychWebgazerCalibrate,
-        calibration_points: [[25, 50], [50, 50], [75, 50], [50, 25], [50, 75]],
-        calibration_mode: 'click'
-    };
+        calibration_points: [
+          [25,25],[75,25],[50,50],[25,75],[75,75]
+        ],
+        repetitions_per_point: 2,
+        randomize_calibration_order: true
+      }
+
+      var validation_instructions = {
+        type: jsPsychHtmlButtonResponse,
+        stimulus: `
+          <p>Now we'll measure the accuracy of the calibration.</p>
+          <p>Look at each dot as it appears on the screen.</p>
+          <p style="font-weight: bold;">You do not need to click on the dots this time.</p>
+        `,
+        choices: ['Got it'],
+        post_trial_gap: 1000
+      }
+
+      var validation = {
+        type: jsPsychWebgazerValidate,
+        validation_points: [
+          [25,25],[75,25],[50,50],[25,75],[75,75]
+        ],
+        roi_radius: 200,
+        time_to_saccade: 1000,
+        validation_duration: 2000,
+        data: {
+          task: 'validate'
+        }
+      }
+
+      var recalibrate_instructions = {
+        type: jsPsychHtmlButtonResponse,
+        stimulus: `
+          <p>The accuracy of the calibration is a little lower than we'd like.</p>
+          <p>Let's try calibrating one more time.</p>
+          <p>On the next screen, look at the dots and click on them.<p>
+        `,
+        choices: ['OK'],
+      }
+
+      var recalibrate = {
+        timeline: [recalibrate_instructions, calibration, validation_instructions, validation],
+        conditional_function: function(){
+          var validation_data = jsPsych.data.get().filter({task: 'validate'}).values()[0];
+          return validation_data.percent_in_roi.some(function(x){
+            var minimum_percent_acceptable = 50;
+            return x < minimum_percent_acceptable;
+          });
+        },
+        data: {
+          phase: 'recalibration'
+        }
+      }
+
+      var calibration_done = {
+        type: jsPsychHtmlButtonResponse,
+        stimulus: `
+          <p>Great, we're done with calibration!</p>
+        `,
+        choices: ['OK']
+      }
 
     /*     letter_survey = {
             type: jsPsychSurveyText,
@@ -160,6 +247,17 @@
         }
     };
 
+    var question_outcome ={
+        type: jsPsychHtmlKeyboardResponse,
+        stimulus: "?",
+        choices: "NO_KEYS",
+        trial_duration: 1000,
+        data: {
+            task: "question_outcome"
+        }
+
+    };
+
     var practice_procedure = {
         timeline: [fixation, test, outcome, blank],
         timeline_variables: practice_stimuli,
@@ -203,7 +301,7 @@
     };
 
     var test_neutral_without_feedback = {
-        timeline: [fixation, test, blank, blank],
+        timeline: [fixation, test, question_outcome, blank],
         timeline_variables: neutral_stimuli,
         data: {
             phase: 'test',
@@ -226,7 +324,7 @@
     };
 
     var test_positive_with_feedback = {
-        timeline: [fixation, test, outcome, blank],
+        timeline: [fixation, test, question_outcome, blank],
         timeline_variables: positive_stimuli,
         data: {
             phase: 'test',
@@ -276,16 +374,25 @@
     };
 
 
-
+    timeline.push(welcome);
+    timeline.push(camera_instructions);
+    timeline.push(init_camera);
+    timeline.push(calibration_instructions);
+    timeline.push(calibration);
+    timeline.push(validation_instructions);
+    timeline.push(validation);
+    timeline.push(recalibrate);
+    timeline.push(calibration_done);
     timeline.push(instructions);
     timeline.push(practice_procedure);
     timeline.push(start_task);
-    timeline.push(test_neutral_with_feedback);
-    timeline.push(trial);
-    timeline.push(test_negative_with_feedback);
-    timeline.push(trial);
-    timeline.push(test_positive_with_feedback);
-    timeline.push(trial);
+    // timeline.push(test_neutral_without_feedback);
+    // timeline.push(test_neutral_with_feedback);
+    // timeline.push(trial);
+    // timeline.push(test_negative_with_feedback);
+    // timeline.push(trial);
+    // timeline.push(test_positive_with_feedback);
+    // timeline.push(trial);
     timeline.push(end);
 
     /* start the experiment */
