--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-survey-likert@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.1.0"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-survey-html-form@1.0.0/dist/index.browser.min.js"></script>
     <script src="https://unpkg.com/@jspsych/plugin-survey-text@1.1.0/dist/index.browser.min.js"></script>
     <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.0"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-instructions@1.1.0/dist/index.browser.min.js"></script>
     <script src="https://unpkg.com/@jspsych/extension-webgazer@1.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-webgazer-init-camera@1.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-webgazer-calibrate@1.0.0"></script>
@@ -17,6 +19,8 @@
     <script src="webgazer.js"></script>
     <script src="stimuli.js"></script>
     <script src="webcam.js"></script>
+    <script src="consent.js"></script>
+    <script src="info_sheet.js"></script>
     <link href="https://unpkg.com/jspsych@7.2.1/css/jspsych.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -210,6 +214,12 @@
         stimulus: jsPsych.timelineVariable('stimulus'),
         choices: ['ArrowLeft', 'ArrowRight'],
         trial_duration: 800,
+        extensions: [
+            {
+                type: jsPsychExtensionWebgazer,
+                params: {targets: ['#jspsych-image0keyboard-response-stimulus']}
+            }
+        ],
         data: {
             task: 'flanker',
             correct_response: jsPsych.timelineVariable('correct_response')
@@ -236,6 +246,17 @@
             task: "feedback"
         }
     };
+
+    var show_data = {
+        type: jsPsychHtmlKeyboardResponse,
+        stimulus: function() {
+          var trial_data = jsPsych.data.getLastTrialData().values();
+          var trial_json = JSON.stringify(trial_data, null, 2);
+          return `<p style="margin-bottom:0px;"><strong>Trial data:</strong></p>
+            <pre style="margin-top:0px;text-align:left;">${trial_json}</pre>`;
+        },
+        choices: "NO_KEYS"
+      };
 
     var blank = {
         type: jsPsychHtmlKeyboardResponse,
@@ -356,6 +377,20 @@
 
     /* create the end screen */
 
+    var done = {
+      type: jsPsychHtmlButtonResponse,
+      choices: ['CSV', 'JSON'],
+      stimulus: `<p>Done!</p><p>If you'd like to download a copy of the data to explore, click the format you'd like below</p>`,
+      on_finish: function(data){
+        if(data.response == 0){
+          jsPsych.data.get().localSave('csv','webgazer-sample-data.csv');
+        }
+        if(data.response == 1){
+          jsPsych.data.get().localSave('json', 'webgazer-sample-data.json');
+        }
+      }
+    };
+
     var end = {
         type: jsPsychHtmlKeyboardResponse,
         stimulus: `<p>You're done! A .csv file containing your data should be automatically downloading right now.
@@ -375,6 +410,8 @@
 
 
     timeline.push(welcome);
+    timeline.push(info_sheet);
+    timeline.push(consent);
     timeline.push(camera_instructions);
     timeline.push(init_camera);
     timeline.push(calibration_instructions);
@@ -385,7 +422,8 @@
     timeline.push(calibration_done);
     timeline.push(instructions);
     timeline.push(practice_procedure);
-    timeline.push(start_task);
+    //timeline.push(show_data);
+    //timeline.push(start_task);
     // timeline.push(test_neutral_without_feedback);
     // timeline.push(test_neutral_with_feedback);
     // timeline.push(trial);
@@ -393,7 +431,7 @@
     // timeline.push(trial);
     // timeline.push(test_positive_with_feedback);
     // timeline.push(trial);
-    timeline.push(end);
+    timeline.push(done);
 
     /* start the experiment */
     jsPsych.run(timeline);
