--- a/index.html
+++ b/index.html
@@ -413,15 +413,9 @@
 
 
     timeline.push(welcome);
-    timeline.push(instructions);
-    timeline.push(demographics_text);
-    timeline.push(demographics_choice);
     timeline.push(info_sheet);
-    timeline.push(debrief_sheet);
     timeline.push(consent);
-    timeline.push(MASQ_survey);
-    timeline.push(IUS_survey);
-    timeline.push(LMRUS);
+    timeline.push(instructions);
     timeline.push(camera_instructions);
     timeline.push(init_camera);
     timeline.push(calibration_instructions);
@@ -430,9 +424,7 @@
     timeline.push(validation);
     timeline.push(recalibrate);
     timeline.push(calibration_done);
-
     timeline.push(practice_procedure);
-    //timeline.push(show_data);
     //timeline.push(start_task);
     // timeline.push(test_neutral_without_feedback);
     // timeline.push(test_neutral_with_feedback);
@@ -441,8 +433,14 @@
     // timeline.push(trial);
     // timeline.push(test_positive_with_feedback);
     // timeline.push(trial);
+    timeline.push(demographics_text);
+    timeline.push(demographics_choice);
+    timeline.push(MASQ_survey);
+    timeline.push(IUS_survey);
+    timeline.push(LMRUS_survey);
+    timeline.push(debrief_sheet);
+    //timeline.push(show_data);
     timeline.push(done);
-
     /* start the experiment */
     jsPsych.run(timeline);
 
