using fullscreen mode

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/@jspsych/plugin-survey-multi-choice@1.1.1/dist/index.browser.min.js"></script>
     <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-instructions@1.1.0/dist/index.browser.min.js"></script>
+    <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.1/dist/index.browser.min.js"></script>
     <script src="https://unpkg.com/@jspsych/extension-webgazer@1.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-webgazer-init-camera@1.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-webgazer-calibrate@1.0.0"></script>
@@ -398,6 +399,7 @@
     };
 
 
+    timeline.push(enter_fullscreen);
     timeline.push(welcome);
     timeline.push(info_sheet);
     timeline.push(consent);
