--- a/index.html
+++ b/index.html
@@ -430,11 +430,14 @@
     };
 
 
+    // START
     timeline.push(enter_fullscreen);
     timeline.push(welcome);
-    // timeline.push(info_sheet);
-    // timeline.push(consent);
-    // timeline.push(instructions);
+
+    // CONSENT FORMS and INSTRUCTIONS
+    timeline.push(info_sheet);
+    timeline.push(consent);
+    timeline.push(instructions);
 
     // EYE TRACKER
     timeline.push(camera_instructions);
@@ -446,51 +449,53 @@
     timeline.push(recalibrate);
     timeline.push(calibration_done);
 
-    // // PRACTICE TRIAL 
-    // timeline.push(practice_procedure);
+    // PRACTICE TRIAL 
+    timeline.push(practice_procedure);
     
-    // // START TASK
+    // START TASK
     timeline.push(start_task);
 
-    // // NEUTRAL NO FEEDBACL
-    // timeline.push(test_neutral_without_feedback);
-    // timeline.push(end_questions);
-    // timeline.push(emotions_questions);
+    // NEUTRAL NO FEEDBACL
+    timeline.push(test_neutral_without_feedback);
+    timeline.push(end_questions);
+    timeline.push(emotions_questions);
 
     // NEGATIVE WITH FEEDBACK
     timeline.push(test_negative_with_feedback);
     timeline.push(end_questions);
     timeline.push(emotions_questions);
 
-    // // POSITIVE NO FEEDBACK
-    // timeline.push(test_positive_without_feedback);
-    // timeline.push(end_questions);
-    // timeline.push(emotions_questions);
+    // POSITIVE NO FEEDBACK
+    timeline.push(test_positive_without_feedback);
+    timeline.push(end_questions);
+    timeline.push(emotions_questions);
 
-    // // NEUTRAL WITH FEEDBACK
-    // timeline.push(test_neutral_with_feedback);
-    // timeline.push(end_questions);
-    // timeline.push(emotions_questions);
+    // NEUTRAL WITH FEEDBACK
+    timeline.push(test_neutral_with_feedback);
+    timeline.push(end_questions);
+    timeline.push(emotions_questions);
 
-    // // POSITIVE WITH FEEDBACK
-    // timeline.push(test_positive_with_feedback);
-    // timeline.push(end_questions);
-    // timeline.push(emotions_questions);
+    // POSITIVE WITH FEEDBACK
+    timeline.push(test_positive_with_feedback);
+    timeline.push(end_questions);
+    timeline.push(emotions_questions);
 
-    // // NEGATIVE WITHOUT FEEDBACK
-    // timeline.push(test_negative_without_feedback);
-    // timeline.push(end_questions);
-    // timeline.push(emotions_questions);
+    // NEGATIVE WITHOUT FEEDBACK
+    timeline.push(test_negative_without_feedback);
+    timeline.push(end_questions);
+    timeline.push(emotions_questions);
 
-    // // QUESTIONNAIRES
-    // timeline.push(demographics_text);
-    // timeline.push(demographics_choice);
-    // timeline.push(MASQ_survey);
-    // timeline.push(IUS_survey);
-    // timeline.push(LMRUS_survey);
-    // timeline.push(debrief_sheet);
+    // QUESTIONNAIRES & END
+    timeline.push(demographics_text);
+    timeline.push(demographics_choice);
+    timeline.push(MASQ_survey);
+    timeline.push(IUS_survey);
+    timeline.push(LMRUS_survey);
+    timeline.push(debrief_sheet);
     timeline.push(exit_fullscreen);
     timeline.push(end);
+
+
     /* start the experiment */
     jsPsych.run(timeline);
 
